--- a/gradle.properties
+++ b/gradle.properties
@@ -32,12 +32,9 @@ org.gradle.caching=true
 # android
 
 android.useAndroidX=true
-android.testConfig.useRelativePath=true
-
+android.nonTransitiveRClass=false
+android.nonFinalResIds=false
 kotlin.parallel.tasks.in.project=true
-kapt.incremental.apt=true
-kapt.use.worker.api=true
-kapt.include.compile.classpath=false
 
 # Upload config
 
