--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -53,7 +53,7 @@ android {
         }
     }
 
-    sourceSets.all {
+    sourceSets.configureEach {
         java.srcDirs += "src/${name}/kotlin"
     }
 
@@ -77,11 +77,6 @@ android {
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
-    }
-
-    dexOptions {
-        // Skip pre-dexing when running on CI or when disabled via -Dpre-dex=false.
-        preDexLibraries = preDexEnabled && !isCi
     }
 
     buildFeatures {
@@ -116,7 +111,7 @@ dependencies {
     implementation "com.squareup.retrofit2:retrofit:$retrofit"
     implementation "com.squareup.retrofit2:converter-moshi:$retrofit"
 
-    implementation 'com.google.android.gms:play-services-base:18.1.0'
+    implementation 'com.google.android.gms:play-services-base:18.5.0'
 
     // debug
     debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.9.1'
@@ -124,7 +119,7 @@ dependencies {
 
 apply plugin: 'com.google.gms.google-services'
 
-android.applicationVariants.all { variant ->
+android.applicationVariants.configureEach { variant ->
     // Remove google services plugin if credential does not exists.
     project.tasks.each { t ->
         if (t.name.toLowerCase().contains("googleservices")) {
