--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -9,16 +9,17 @@ on:
 
 env:
   CACHE_NUMBER: 0 # increment to truncate cache
-  USER_JAVA_VERSION: 11.x
+  USER_JAVA_VERSION: "11"
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-java@v1
+      - uses: actions/checkout@v4
+      - uses: actions/setup-java@v4
         with:
           java-version: ${{ env.USER_JAVA_VERSION }}
+          distribution: "zulu"
       # configure cache
       - name: Cache Gradle
         uses: actions/cache@v2
@@ -38,12 +39,18 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-gems-${{ env.CACHE_NUMBER }}-
             ${{ runner.os }}-gems-
+      - name: Set up Ruby
+        uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: "3.0.0"
       - name: Install gems
         run: |
-          sudo gem install bundler -N
+          gem install bundler -N --user-install
+          echo "$(ruby -e 'print Gem.user_dir')/bin" >> $GITHUB_PATH
           bundle update --bundler
           bundle config set deployment 'true'
           bundle config set clean 'true'
+          bundle config set path 'vendor/bundle'
           bundle install --jobs 4 --retry 3
       - name: Run all checks
         run: bundle exec fastlane android check
