--- a/build.gradle
+++ b/build.gradle
@@ -24,15 +24,14 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.6.21'
     repositories {
         google()
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:8.5.0'
-        classpath 'com.google.gms:google-services:4.4.2'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath libs.gradle
+        classpath libs.google.services
+        classpath libs.kotlin.gradle.plugin
     }
 }
 
@@ -69,26 +68,8 @@ tasks.named("dokkaHtmlCollector") {
 }
 
 ext {
-
     minSdkVersion = 16
     sdkVersion = 33
-
-    okHttp = "3.12.12"
-    moshi = "1.9.3"
-    retrofit = "2.6.4"
-    lifecycle = "2.2.0"
-    mockito = "2.28.2"
-    coroutine = "1.3.7"
-    appcompat = "1.2.0"
-    fragment = "1.2.5"
-    material = "1.2.1"
-    constraint = "2.0.2"
-    recyclerview = "1.1.0"
-    cardio = "5.5.1"
-    annotation = '1.1.0'
-
-    isCi = "true" == System.getenv("CI")
-    preDexEnabled = "true" == System.getProperty("pre-dex", "true")
     numberOfCommits = numberOfCommits()
 }
 
