--- a/common-test/build.gradle
+++ b/common-test/build.gradle
@@ -34,7 +34,7 @@ android {
 }
 
 dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation libs.kotlin.stdlib.jdk7
     implementation project(':payjp-android-core')
-    implementation "org.mockito:mockito-core:$mockito"
+    implementation libs.mockito.core
 }
