--- a/gradle/dependencies-test.gradle
+++ b/gradle/dependencies-test.gradle
@@ -22,10 +22,10 @@
  */
 
 dependencies {
-    testImplementation 'androidx.test:core-ktx:1.3.0'
-    testImplementation "androidx.test.ext:junit-ktx:1.1.2"
-    testImplementation 'androidx.test.espresso:espresso-contrib:3.3.0'
-    testImplementation 'androidx.test.espresso:espresso-intents:3.3.0'
-    testImplementation "org.robolectric:robolectric:4.4"
-    testImplementation "org.mockito:mockito-core:$mockito"
+    testImplementation libs.androidx.core.ktx
+    testImplementation libs.androidx.junit.ktx
+    testImplementation libs.androidx.espresso.contrib
+    testImplementation libs.androidx.espresso.intents
+    testImplementation libs.robolectric
+    testImplementation libs.mockito.core
 }
