--- a/payjp-android-coroutine/build.gradle
+++ b/payjp-android-coroutine/build.gradle
@@ -31,8 +31,8 @@ apply from: rootProject.file("gradle/dependencies-test.gradle")
 apply from: rootProject.file("gradle/android-common.gradle")
 
 dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutine"
+    implementation libs.kotlin.stdlib
+    implementation libs.kotlinx.coroutines.core
     api project(':payjp-android-main')
 
     testImplementation project(":common-test")
