--- a/build.gradle
+++ b/build.gradle
@@ -22,22 +22,12 @@
  */
 
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
-
-buildscript {
-    repositories {
-        google()
-        mavenCentral()
-    }
-    dependencies {
-        classpath libs.gradle
-        classpath libs.google.services
-        classpath libs.kotlin.gradle.plugin
-    }
-}
-
 plugins {
-    id "com.diffplug.spotless" version "5.6.1"
-    id "org.jetbrains.dokka" version "1.4.10"
+    alias(libs.plugins.android.application) apply false
+    alias(libs.plugins.jetbrains.kotlin.android) apply false
+    alias(libs.plugins.google.devtools.ksp) apply false
+    alias(libs.plugins.diffplug.spotless)
+    alias(libs.plugins.jetbrains.dokka)
 }
 
 subprojects {
@@ -71,14 +61,6 @@ ext {
     minSdkVersion = 16
     sdkVersion = 33
     numberOfCommits = numberOfCommits()
-}
-
-allprojects {
-    repositories {
-        google()
-        mavenCentral()
-        maven { url "https://oss.sonatype.org/content/groups/public/" }
-    }
 }
 
 def numberOfCommits() {
