--- a/gradle.properties
+++ b/gradle.properties
@@ -23,7 +23,7 @@
 
 # gradle configuration
 
-org.gradle.jvmargs=-Xmx2048m -XX:MaxPermSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
+org.gradle.jvmargs=-Xmx2048m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
 org.gradle.parallel=true
 org.gradle.daemon=true
 org.gradle.configureondemand=true
@@ -32,8 +32,6 @@ org.gradle.caching=true
 # android
 
 android.useAndroidX=true
-android.nonTransitiveRClass=false
-android.nonFinalResIds=false
 kotlin.parallel.tasks.in.project=true
 
 # Upload config
