--- a/gradle/android-common.gradle
+++ b/gradle/android-common.gradle
@@ -31,14 +31,8 @@ android {
     sourceSets.all {
         java.srcDirs += "src/${name}/kotlin"
     }
-
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
-    }
-
-    kotlinOptions {
-        jvmTarget = "1.8"
+    kotlin {
+        jvmToolchain 17
     }
 
     testOptions {
