--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,15 +1,16 @@
 [versions]
 agp = "8.5.0"
+ksp = "1.8.10-1.0.9"
+dokka = "1.4.10"
+spotless = "5.6.1"
 coreKtx = "1.3.0"
 espressoContrib = "3.3.0"
-firebaseAppdistributionGradle = "3.0.3"
-googleServices = "4.4.2"
 junitKtx = "1.1.2"
 kotlin = "1.6.21"
 browser = "1.2.0"
 leakcanaryAndroid = "2.9.1"
 okHttp3 = "3.12.12"
-moshi = "1.9.3"
+moshi = "1.15.1"
 playServicesBase = "18.5.0"
 retrofit = "2.6.4"
 lifecycle = "2.2.0"
@@ -49,10 +50,6 @@ androidx-swiperefreshlayout = { module = "androidx.swiperefreshlayout:swiperefre
 androidx-viewpager2 = { module = "androidx.viewpager2:viewpager2", version.ref = "viewpager2" }
 androidx-webkit = { module = "androidx.webkit:webkit", version.ref = "webkit" }
 cardio = { group = "io.card", name = "android-sdk", version.ref = "cardio" }
-firebase-appdistribution-gradle = { module = "com.google.firebase:firebase-appdistribution-gradle", version.ref = "firebaseAppdistributionGradle" }
-gradle = { module = "com.android.tools.build:gradle", version.ref = "agp" }
-google-services = { module = "com.google.gms:google-services", version.ref = "googleServices" }
-kotlin-gradle-plugin = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin", version.ref = "kotlin" }
 kotlin-stdlib = { module = "org.jetbrains.kotlin:kotlin-stdlib", version.ref = "kotlin" }
 kotlin-stdlib-jdk7 = { module = "org.jetbrains.kotlin:kotlin-stdlib-jdk7", version.ref = "kotlin" }
 kotlinx-coroutines-android = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-android", version.ref = "coroutine" }
@@ -70,3 +67,8 @@ mockito-core = { group = "org.mockito", name = "mockito-core", version.ref = "mo
 robolectric = { module = "org.robolectric:robolectric", version.ref = "robolectric" }
 
 [plugins]
+android-application = { id = "com.android.application", version.ref = "agp" }
+jetbrains-kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
+jetbrains-dokka = { id = "org.jetbrains.dokka", version.ref = "dokka" }
+diffplug-spotless = { id = "com.diffplug.spotless", version.ref = "spotless" }
+google-devtools-ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
