--- a/common-test/build.gradle
+++ b/common-test/build.gradle
@@ -35,7 +35,7 @@ android {
 }
 
 dependencies {
-    implementation libs.kotlin.stdlib.jdk7
+    implementation libs.kotlin.stdlib
     implementation project(':payjp-android-core')
     implementation libs.mockito.core
 }
