--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,7 @@ plugins {
     alias(libs.plugins.android.application) apply false
     alias(libs.plugins.jetbrains.kotlin.android) apply false
     alias(libs.plugins.google.devtools.ksp) apply false
+    alias(libs.plugins.maven.publish) apply false
     alias(libs.plugins.diffplug.spotless)
     alias(libs.plugins.jetbrains.dokka)
 }
