--- a/gradle.properties
+++ b/gradle.properties
@@ -35,6 +35,8 @@ android.useAndroidX=true
 kotlin.parallel.tasks.in.project=true
 
 # Upload config
+SONATYPE_HOST=DEFAULT
+RELEASE_SIGNING_ENABLED=true
 
 GROUP=jp.pay
 
@@ -51,4 +53,4 @@ POM_DEVELOPER_ID=payjp
 POM_DEVELOPER_NAME=PAY.JP
 POM_DEVELOPER_EMAIL=support@pay.jp
 
-VERSION_NAME=1.6.0
+VERSION_NAME=1.7.0-SNAPSHOT
