--- a/payjp-android-core/build.gradle
+++ b/payjp-android-core/build.gradle
@@ -26,9 +26,9 @@ plugins {
     alias(libs.plugins.jetbrains.kotlin.android)
     alias(libs.plugins.jetbrains.dokka)
     alias(libs.plugins.google.devtools.ksp)
+    alias(libs.plugins.maven.publish)
 }
 
-//apply from: rootProject.file('gradle/gradle-mvn-push.gradle')
 apply from: rootProject.file("gradle/dependencies-test.gradle")
 apply from: rootProject.file("gradle/android-common.gradle")
 
