--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -4,7 +4,13 @@ on:
   push:
     branches:
       - master
+    paths-ignore:
+      - "README.md"
+      - "docs/**"
   pull_request:
+    paths-ignore:
+      - "README.md"
+      - "docs/**"
   workflow_dispatch:
 
 env:
@@ -20,17 +26,7 @@ jobs:
         with:
           java-version: ${{ env.USER_JAVA_VERSION }}
           distribution: "zulu"
-      # configure cache
-      - name: Cache Gradle
-        uses: actions/cache@v4
-        with:
-          path: |
-            ~/.gradle/cache
-            ~/.gradle/wrapper
-          key: ${{ runner.os }}-gradle-${{ env.CACHE_NUMBER }}-${{ hashFiles('**/*/*.gradle*') }}
-          restore-keys: |
-            ${{ runner.os }}-gradle-${{ env.CACHE_NUMBER }}-
-            ${{ runner.os }}-gradle-
+      - uses: gradle/actions/setup-gradle@v3
       - name: Cache Gems
         uses: actions/cache@v4
         with:
@@ -54,3 +50,26 @@ jobs:
           bundle install --jobs 4 --retry 3
       - name: Run all checks
         run: bundle exec fastlane android check
+
+  deploy:
+    # only run on master branch
+    if: github.ref == 'refs/heads/master'
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-java@v4
+        with:
+          java-version: ${{ env.USER_JAVA_VERSION }}
+          distribution: "zulu"
+      - uses: gradle/actions/setup-gradle@v3
+
+      - name: publish to sonatype
+        run: |
+          ./gradlew publish
+        env:
+          ORG_GRADLE_PROJECT_mavenCentralUsername: ${{ secrets.MAVEN_CENTRAL_USERNAME }}
+          ORG_GRADLE_PROJECT_mavenCentralPassword: ${{ secrets.MAVEN_CENTRAL_PASSWORD }}
+          ORG_GRADLE_PROJECT_signingInMemoryKey: ${{ secrets.GPG_KEY }}
+          ORG_GRADLE_PROJECT_signingInMemoryKeyId: ${{ secrets.GPG_KEY_ID }}
+          ORG_GRADLE_PROJECT_signingInMemoryKeyPassword: ${{ secrets.GPG_KEY_PASSWORD }}
