--- a/payjp-android-verifier/build.gradle
+++ b/payjp-android-verifier/build.gradle
@@ -57,3 +57,11 @@ dependencies {
 
     testImplementation project(":common-test")
 }
+
+mavenPublishing {
+    // workaround for issue that dokka with JDK 17
+    // see: https://github.com/Kotlin/dokka/issues/2956
+    // the second whether to publish a sources jar
+    // the third whether to publish a javadoc jar
+    configure(new com.vanniktech.maven.publish.AndroidSingleVariantLibrary("release", true, false))
+}
