--- a/payjp-android-cardio/build.gradle
+++ b/payjp-android-cardio/build.gradle
@@ -39,3 +39,11 @@ dependencies {
 android {
     namespace 'jp.pay.android.cardio'
 }
+
+mavenPublishing {
+    // workaround for issue that dokka with JDK 17
+    // see: https://github.com/Kotlin/dokka/issues/2956
+    // the second whether to publish a sources jar
+    // the third whether to publish a javadoc jar
+    configure(new com.vanniktech.maven.publish.AndroidSingleVariantLibrary("release", true, false))
+}
