--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -53,7 +53,7 @@ jobs:
 
   deploy-snapshot:
     # only run on master branch
-    # if: github.ref == 'refs/heads/master' FIXME: test
+    if: github.ref == 'refs/heads/master'
     needs: build
     runs-on: ubuntu-latest
     steps:
