Phone number model

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -16,7 +16,7 @@ lifecycle = "2.2.0"
 mockito = "5.12.0"
 coroutine = "1.3.7"
 appcompat = "1.2.0"
-fragment = "1.2.5"
+fragment = "1.3.0"
 material = "1.2.1"
 constraint = "2.0.2"
 recyclerview = "1.1.0"
@@ -63,6 +63,7 @@ retrofit-core = { group = "com.squareup.retrofit2", name = "retrofit", version.r
 retrofit-moshi = { group = "com.squareup.retrofit2", name = "converter-moshi", version.ref = "retrofit" }
 mockito-core = { group = "org.mockito", name = "mockito-core", version.ref = "mockito" }
 robolectric = { module = "org.robolectric:robolectric", version.ref = "robolectric" }
+libphonenumber = { group = "io.michaelrocks", name = "libphonenumber-android", version = "8.13.35" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
