--- a/payjp-android-cardform/build.gradle
+++ b/payjp-android-cardform/build.gradle
@@ -55,6 +55,7 @@ dependencies {
     implementation libs.androidx.lifecycle.livedata.ktx
     implementation libs.androidx.material
     implementation libs.androidx.constraint
+    implementation libs.libphonenumber
 
     testImplementation project(":common-test")
 }
