--- a/payjp-android-verifier/build.gradle
+++ b/payjp-android-verifier/build.gradle
@@ -41,13 +41,13 @@ dependencies {
     implementation libs.kotlin.stdlib
     api project(':payjp-android-core')
 
+    implementation libs.androidx.core.ktx
     implementation libs.androidx.fragment
     implementation libs.androidx.appcompat
     implementation libs.androidx.recyclerview
-    implementation libs.androidx.lifecycle.common.java8
-    implementation libs.androidx.lifecycle.extensions
-    implementation libs.androidx.lifecycle.viewmodel.ktx
-    implementation libs.androidx.lifecycle.livedata.ktx
+    implementation libs.androidx.lifecycle.common
+    implementation libs.androidx.lifecycle.viewmodel
+    implementation libs.androidx.lifecycle.livedata
     implementation libs.androidx.material
     implementation libs.androidx.constraint
 
