Fix TDS browser

--- a/payjp-android-verifier/src/main/AndroidManifest.xml
+++ b/payjp-android-verifier/src/main/AndroidManifest.xml
@@ -22,6 +22,12 @@
   -->
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
+    <queries>
+        <intent>
+            <action android:name="android.intent.action.VIEW" />
+            <data android:scheme="https" />
+        </intent>
+    </queries>
 
     <application>
 
