--- a/payjp-android-verifier/src/main/AndroidManifest.xml
+++ b/payjp-android-verifier/src/main/AndroidManifest.xml
@@ -24,8 +24,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
     <queries>
         <intent>
-            <action android:name="android.intent.action.VIEW" />
-            <data android:scheme="https" />
+            <action android:name="android.support.customtabs.action.CustomTabsService" />
         </intent>
     </queries>
 
