--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -36,6 +36,7 @@ android {
         targetSdkVersion rootProject.sdkVersion
         versionCode rootProject.numberOfCommits
         versionName VERSION_NAME
+        multiDexEnabled true
     }
 
     sourceSets.configureEach {
