--- a/sample/src/main/AndroidManifest.xml
+++ b/sample/src/main/AndroidManifest.xml
@@ -34,7 +34,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
+        android:theme="@style/Material"
         android:fullBackupContent="false"
         tools:ignore="GoogleAppIndexingWarning">
         <activity android:name="com.example.payjp.sample.TopActivity"
