pushing to main branch deploy snapshot only

--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -58,24 +58,22 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      # look up version name from gradle.properties, and only snapshot version can be deployed
-      - run: |
-          VERSION_NAME=$(grep "VERSION_NAME" gradle.properties | cut -d'=' -f2)
-          if [[ $VERSION_NAME == *"SNAPSHOT"* ]]; then
-            echo "Deploying snapshot version $VERSION_NAME"
-          else
-            echo "Not deploying non-snapshot version $VERSION_NAME"
-            exit 0
-          fi
       - uses: actions/setup-java@v4
         with:
           java-version: ${{ env.USER_JAVA_VERSION }}
           distribution: "zulu"
       - uses: gradle/actions/setup-gradle@v3
-
       - name: publish to sonatype
+        # look up version name from gradle.properties, and only snapshot version can be deployed
+        # if non-snapshot version, skip the next steps
         run: |
-          ./gradlew publish
+          VERSION_NAME=$(grep "VERSION_NAME" gradle.properties | cut -d'=' -f2)
+          if [[ $VERSION_NAME == *"SNAPSHOT"* ]]; then
+            echo "Deploying snapshot version $VERSION_NAME"
+            ./gradlew publish
+          else
+            echo "Not deploying non-snapshot version $VERSION_NAME"
+          fi
         env:
           ORG_GRADLE_PROJECT_mavenCentralUsername: ${{ secrets.MAVEN_CENTRAL_USERNAME }}
           ORG_GRADLE_PROJECT_mavenCentralPassword: ${{ secrets.MAVEN_CENTRAL_PASSWORD }}
