--- a/gradle.properties
+++ b/gradle.properties
@@ -35,7 +35,7 @@ android.useAndroidX=true
 kotlin.parallel.tasks.in.project=true
 
 # Upload config
-SONATYPE_HOST=DEFAULT
+SONATYPE_HOST=CENTRAL_PORTAL
 RELEASE_SIGNING_ENABLED=true
 
 GROUP=jp.pay
